# terminal-pixel-art

./: .gitignore  README.md  pyproject.toml
examples/: lighthouse.tpa  rocket.tpa
tpa/: __init__.py  __main__.py  cli.py  drawing.py  fileio.py  model.py  palette.py  render.py  selection.py  transform.py  tui.py
tpa/.agents/skills/tpa/: SKILL.md
